k8s/bastille/filebrowser/base/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: filebrowser
  labels:
    app: filebrowser
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser:s6
        resources:
          requests:
            memory: "1024Mi"
            cpu: "1000m"
          limits:
            memory: "2048Mi"
            cpu: "1000m"
        ports: 
        - containerPort: 80
        volumeMounts:
          - mountPath: "/srv"
            name: srv
          - mountPath: "/database/"
            name: db
          - mountPath: "/config/settings.json"
            subPath: settings.json
            name: settings
      volumes:
        - name: srv
          persistentVolumeClaim:
            claimName: filebrowser-srv
        - name: db
          persistentVolumeClaim:
            claimName: filebrowser-db
        - name: settings
          configMap: 
            name: filebrowser
