k8s/bastille/filebrowser/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
spec:
  selector:
    app: filebrowser
  ports:
  - name: http
    targetPort: 80
    port: 80
