k8s/bastille/filebrowser/base/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser
  namespace: filebrowser
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`filebrowser.dcnt.company`)
      kind: Rule
      priority: 0
      services:
        - name: filebrowser
          port: 80
      middlewares:
        - name: default-headers
        - name: authentik
          namespace: authentik
    - match: "Host(`filebrowser.dcnt.company`) && PathPrefix(`/outpost.goauthentik.io/`)"
      kind: Rule
      priority: 15
      services:
          - kind: Service
            name: ak-outpost-authentik-embedded-outpost
            namespace: authentik
            port: 9000
  tls:
    secretName: k8s-dcnt-company-tls
